--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body>
     <h1>Girl Develop It Seattle</h1>
     <h2>Intermediate HTML and CSS</h2>
-    <p><a href="/gdi-core-intermediate-html-css-master/class1.html">Class 1 slides</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1</a></p>
   </body>
 </html>
