--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <h1>Girl Develop It Seattle</h1>
     <h2>Intermediate HTML and CSS</h2>
     <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class2.html">Class 2</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
   </body>
 </html>
