add intro to python slides

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <p><a href="gdi-core-intermediate-html-css-master/class2.html">Class 2</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
+  <h2>Intro to Python</h2>
+    <p><a href="gdi-intro-python/class1.html">Class 1</a></p>
+    <p><a href="gdi-intro-python/class2.html">Class 2</a></p>
+    <p><a href="gdi-intro-python/class3.html">Class 3</a></p>
+    <p><a href="gdi-intro-python/class4.html">Class 4</a></p>
   </body>
 </html>
