--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -12,8 +12,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-        <link rel="stylesheet" href="reveal/css/reveal.css">
-        <link rel="stylesheet" href="reveal/css/theme/gdicool.css" id="theme">
+        <link rel="stylesheet" href="reveal/css/reveal.css" id="theme">
+        <link rel="stylesheet" href="reveal/css/theme/gdicool.css">
 
         <!-- For syntax highlighting -->
         <!-- light editor<link rel="stylesheet" href="lib/css/light.css">-->
