--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <body>
     <h1>Girl Develop It Seattle</h1>
     <h2>Intermediate HTML and CSS</h2>
-    <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1 Slides</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class1/class1.zip">Class 1 Practice Files</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class2.html">Class 2</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
