add web concepts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <body>
     <h1>Girl Develop It Seattle</h1>
+	<h2>Intro to Web Concepts</h2>
+    <p><a href="gdi-intro-web-concepts/index.html">Class Slides</a></p>
     <h2>Intermediate HTML and CSS</h2>
     <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1 Slides</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class1.zip">Class 1 Practice Files</a></p>
