change intro question

--- a/gdi-intro-web-concepts/index.html
+++ b/gdi-intro-web-concepts/index.html
@@ -63,7 +63,7 @@
                         <ul>
                             <li>Who are you?</li>
                             <li>What do you hope to get out of the class?</li>
-                            <li>What is your favorite dessert?</li>
+                            <li>What did you want to be when you were a kid?</li>
                         </ul>
                     </div>
                 </section>
