--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -200,14 +200,14 @@
                     <pre><code contenteditable class="python">
 a = 2
 b = 3
-print a + b
+print(a + b)
 c = a + b
-print c * 2
+print(c * 2)
                     </code></pre>
                     <pre><code contenteditable class="python">
 a = 0
 a = a + .5
-print a
+print(a)
                     </code></pre>
                 </section>
 
@@ -216,19 +216,19 @@ print a
                     <pre><code contenteditable class="python">
 a = 'Hello '
 b = 'World'
-c = a + b
-print c
+c =(a + b)
+print(c)
                     </code></pre>
                     <pre><code contenteditable class="python">
 a = "Spam "
 b = a * 4
-print b
+print(b)
                     </code></pre>
                     <pre><code contenteditable class="python">
 a = 'spam '
 b = 'eggs'
 c = a * 4 + b
-print c
+print(c)
                     </code></pre>
                 </section>
 
@@ -244,14 +244,14 @@ print c
                     </ul>
                     <pre><code contenteditable class="python">
 a = 4
-print type(a)
-print type(4)
+print(type(a))
+print(type(4))
 
-print type(3.14)
+print(type(3.14))
 
 b = 'spam, again'
-print type(b)
-print type("But I don't like spam")
+print(type(b))
+print(type("But I don't like spam"))
                     </code></pre>
                 </section>
 
@@ -264,10 +264,10 @@ print type("But I don't like spam")
                             <li>What happens if we try to use division or subtraction with a string?</li>
                         </ul>
                     <pre><code contenteditable class="python">
-print "Spam" - "am"
+print("Spam" - "am")
 a = 'Spam and eggs'
-print a / 'hashbrowns'
-print a / 6
+print(a / 'hashbrowns')
+print(a / 6)
                     </code></pre>
                     </section>
 
@@ -289,7 +289,7 @@ print a / 6
 
 # NameError - Using a name that hasn't been defined yet
 a = 5
-print b
+print(b)
 b = 10
 
 # TypeError - Using an object in a way that its type does not support
@@ -316,26 +316,37 @@ b = 10
                             <th><strong>Command</strong></th>
                             <th><strong>Short for</strong></th>
                             <th><strong>Description</strong></th>
+                            <th><strong>DOS Alternative</strong></th>
                         </tr>
                         <tr>
                             <td>pwd</td>
                             <td>Print working directory</td>
                             <td>Displays what folder you are in.</td>
+                            <td>CHDIR</td>
                         </tr>
                         <tr>
                             <td>ls</td>
                             <td>List</td>
                             <td>Lists the files and folders in the current folder</td>
+						    <td>DIR</td>
                         </tr>
                         <tr>
                             <td>cd</td>
                             <td>Change directory</td>
                             <td>Change to another folder. Takes the folder name as an argument. 'cd ..' goes up a directory</td>
+							<td>CD</td>
                         </tr>
                         <tr>
                             <td>cat</td>
                             <td>Concatenate</td>
                             <td>Prints the contents of a file. Takes a filename as an argument</td>
+							<td>TYPE</td>
+                        </tr>
+						<tr>
+                            <td>mkdir</td>
+                            <td>Make Directory</td>
+                            <td>Makes a new directory inside the current working directory.</td>
+							<td>TYPE</td>
                         </tr>
                     </table>
                 </section>
@@ -364,7 +375,7 @@ pwd
                         <li class="fragment">Click file, open folder. Navigate to the gdi-intro-python folder we created and click "open"</li>
                         <li class="fragment">In the text editor, enter the following:
                     <pre><code contenteditable class="fragment python">
-print 'I am a Python program'
+print('I am a Python program')
                     </code></pre>
                         </li>
                         <li class="fragment">Click file, save as. Type 'class1.py' and click ok.</li>
@@ -376,14 +387,14 @@ print 'I am a Python program'
 
                 <section>
                     <h3>User Input</h3>
-                    <p>To obtain user input, use 'raw_input()'</p>
+                    <p>To obtain user input, use 'raw_input()' for Python 2.7 and 'input() for Python 3.3'</p>
                     <p class="fragment">Change the class1.py text to the following and run it again</p>
                     <pre><code contenteditable class="fragment python">
-input_value = raw_input("Enter a radius:")
+input_value = raw_input("Enter a radius:") #for Python 3.3 replace with input_value = input("Enter a radius:")
 radius = float(input_value)
 area = 3.14159 * radius ** 2
-print "The area of a circle with radius " + input_value + " is:"
-print area
+print("The area of a circle with radius " + input_value + " is:")
+print(area)
                     </code></pre>
                     <p class="fragment">N.B. - The user's input is a string so we use float() to make it a number</p>
                 </section>
