divide terminal commands into two pages to improve readability

--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -336,6 +336,19 @@ b = 10
                             <td>Change to another folder. Takes the folder name as an argument. 'cd ..' goes up a directory</td>
 							<td>CD</td>
                         </tr>
+                    </table>
+                </section>
+
+               <section>
+                    <h3>Using the Terminal - Part 2</h3>
+                    <p>Try each of the following commands in turn:</p>
+                    <table>
+                        <tr>
+                            <th><strong>Command</strong></th>
+                            <th><strong>Short for</strong></th>
+                            <th><strong>Description</strong></th>
+                            <th><strong>DOS Alternative</strong></th>
+                        </tr>
                         <tr>
                             <td>cat</td>
                             <td>Concatenate</td>
