add dos example for creating project folder

--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -367,6 +367,7 @@ b = 10
                 <section>
                     <h3>Creating a folder</h3>
                     <p>We need a folder to save our work in.</p>
+                    <p>For older Windows versions without powershell, see the next slide.</p>
                     <p class="fragment">The -&gt;'s below indicate the expected output of the previous command.</p>
                     <pre><code contenteditable class="fragment bash">
 pwd
@@ -380,6 +381,23 @@ pwd
                     </code></pre>
                     <p class="fragment">Now that the folders are made, we only have to use 'cd Projects/gdi-intro-python' in the future.</p>
                 </section>
+
+			   <section>
+			       <h3>Creating a folder on Windows without Powershell</h3>
+				   <p>We need a folder to save our work in.</p>
+				   <p class="fragment">The -&gt;'s below indicate the expected output of the previous command.</p>
+				                    <pre><code contenteditable class="fragment bash">
+				CHDIR
+				-> /home/username
+				MKDIR Projects
+				CD Projects
+				MKDIR gdi-intro-python
+				CD gdi-intro-python
+				CHDIR
+				-> /home/username/Projects/gdi-intro-python
+				                    </code></pre>
+				                    <p class="fragment">Now that the folders are made, we only have to use 'cd Projects/gdi-intro-python' in the future.</p>
+				                </section>
 
                 <section>
                     <h3>The Text Editor</h3>
