clean up pre display on final assignment

--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -421,7 +421,8 @@ print('I am a Python program')
                     <p>To obtain user input, use 'raw_input()' for Python 2.7 and 'input() for Python 3.3'</p>
                     <p class="fragment">Change the class1.py text to the following and run it again</p>
                     <pre><code contenteditable class="fragment python">
-input_value = raw_input("Enter a radius:") #for Python 3.3 replace with input_value = input("Enter a radius:")
+input_value = raw_input("Enter a radius:") 
+#for Python 3.3 replace with input_value = input("Enter a radius:")
 radius = float(input_value)
 area = 3.14159 * radius ** 2
 print("The area of a circle with radius " + input_value + " is:")
