--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -418,7 +418,7 @@ print('I am a Python program')
 
                 <section>
                     <h3>User Input</h3>
-                    <p>To obtain user input, use 'raw_input()' for Python 2.7 and 'input() for Python 3.3'</p>
+                    <p>To obtain user input, use 'raw_input()' for Python 2.7 and 'input()' for Python 3.3</p>
                     <p class="fragment">Change the class1.py text to the following and run it again</p>
                     <pre><code contenteditable class="fragment python">
 input_value = raw_input("Enter a radius:") 
