fix typo in DOS commands

--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -359,7 +359,7 @@ b = 10
                             <td>mkdir</td>
                             <td>Make Directory</td>
                             <td>Makes a new directory inside the current working directory.</td>
-							<td>TYPE</td>
+							<td>MKDIR</td>
                         </tr>
                     </table>
                 </section>
