--- a/gdi-intro-python/class1.html
+++ b/gdi-intro-python/class1.html
@@ -434,7 +434,7 @@ print(area)
                 <!-- Let's develop it: 15 minutes -->
                 <section>
                     <h3>Let's Develop It</h3>
-                    <p>Write your own program that uses raw_input and does something else with the value</p>
+                    <p>Write your own program that uses raw_input() (Python 2.7) or input() (Python 3.3) and does something else with the value</p>
                     <p>You can use float() to treat the input as a number if you need a number, or use the input directly as a string</p>
                 </section>
 
