--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1 Slides</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class1.zip">Class 1 Practice Files</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class2.html">Class 2</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class2.zip">Class 2 Practice Files</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
   <h2>Intro to Python</h2>
