--- a/gdi-intro-python/class2.html
+++ b/gdi-intro-python/class2.html
@@ -68,12 +68,12 @@
                     <pre class="fragment"><code contenteditable class="python">
 a = 5
 b = 5
-print a == b
+print(a == b)
 # Combine comparison and assignment
 c = a == b
-print c
+print(c)
 
-print 3 &lt; 5
+print(3 &lt; 5)
                     </code></pre>
                 </section>
 
@@ -109,9 +109,9 @@ print 3 &lt; 5
                     <pre class="fragment"><code contenteditable class="python">
 a = 3
 b = 4
-print a != b
-print a <= 3
-print a >= 4
+print(a != b)
+print(a <= 3)
+print(a >= 4)
                     </code></pre>
                     <p class="fragment">Remember: Equals does not equal "equals equals"</p>
                 </section>
@@ -122,14 +122,14 @@ print a >= 4
                     <p class="fragment">We achieve this using <strong>if</strong> statements</p>
                     <pre><code contenteditable class="fragment python">
 if x == 5:
-    print 'x is equal to 5'
+    print('x is equal to 5')
                     </code></pre>
                     <p class="fragment">We often want a different block to execute if the statement is false. This can be accomplished using <strong>else</strong></p>
                     <pre><code contenteditable class="fragment python">
 if x == 5:
-    print 'x is equal to 5'
+    print('x is equal to 5')
 else:
-    print 'x is not equal to 5'
+    print('x is not equal to 5')
                     </code></pre>
                 </section>
 
@@ -139,16 +139,16 @@ else:
                     <p class="fragment">Let's look at the previous example again with a few minor changes and examine the meaning of its indentation</p>
                     <pre><code contenteditable class="fragment python">
 if x == 5:
-    print 'x is equal to 5'
+    print('x is equal to 5')
     x_is_5 = True
-    print 'Still in the x == 5 block'
+    print('Still in the x == 5 block')
 else:
-    print 'x is not equal to 5'
+    print('x is not equal to 5')
     x_is_5 = False
-    print 'Still in the else block of x == 5'
-print 'Outside of the if or else blocks.'
-print 'x_is_5:'
-print x_is_5
+    print('Still in the else block of x == 5')
+print('Outside of the if or else blocks.')
+print('x_is_5:')
+print(x_is_5)
                     </code></pre>
                 </section>
 
@@ -166,7 +166,7 @@ print x_is_5
                     <pre><code contenteditable class="fragment python">
 # 1. Simple check of two variables
 if x != 0 or y != 0:
-    print 'The point x,y is not on the x or y axis'
+    print('The point x,y is not on the x or y axis')
 
 # 2. Checking for Pong paddle missing the ball for player 2
 if ball_right_x > paddle_left_x and (ball_top_y > paddle_bottom_y or ball_bottom_y < paddle_top_y):
@@ -188,11 +188,11 @@ if ball_right_paddle and (ball_above_paddle or ball_below_paddle):
                     <p class="fragment">Chained conditionals use <strong>elif</strong> as an additonal check after the preceeding `if` predicate was False. For example</p>
                     <pre><code contenteditable class="fragment python">
 if x > 5:
-    print 'x is greater than 5'
+    print('x is greater than 5')
 elif x < 5:
-    print 'x is less than 5'
+    print('x is less than 5')
 else:
-    print 'x is equal to 5'
+    print('x is equal to 5')
                     </code></pre>
                 </section>
 
@@ -202,11 +202,11 @@ else:
                     <p class="fragment">Nested conditionals occur inside of other conditionals and are indented over once more. When the code block is complete, they are unindented</p>
                     <pre><code contenteditable class="fragment python">
 if x > 5:
-    print 'x is greater than 5'
+    print('x is greater than 5')
     if x > 10:
-        print '...it is also greater than 10'
-    print 'Done evaluating the x > 10 block'
-print 'Done evaluating the x > 5 block'
+        print('...it is also greater than 10')
+    print('Done evaluating the x > 10 block')
+print('Done evaluating the x > 5 block')
                     </code></pre>
                 </section>
 
@@ -217,18 +217,20 @@ print 'Done evaluating the x > 5 block'
                     <p>The code below is an example:</p>
                     <pre><code contenteditable class="fragment python">
 health = 100
-print "A vicious warg is chasing you."
-print "Options:"
-print "1 - Hide in the cave."
-print "2 - Climb a tree."
+print("A vicious warg is chasing you.")
+print("Options:")
+print("1 - Hide in the cave.")
+print("2 - Climb a tree.")
 input_value = raw_input("Enter choice:")
+#For Python 3.3, replace this with:
+#input_value = input("Enter choice:")
 if input_value == '1':
-    print 'You hide in a cave.'
-    print 'The warg finds you and injures your leg with its claws'
+    print('You hide in a cave.')
+    print('The warg finds you and injures your leg with its claws')
     health = health - 10
 elif input_value == '2':
-    print 'You climb a tree.'
-    print 'The warg eventually looses interest and wanders off'
+    print('You climb a tree.')
+    print('The warg eventually looses interest and wanders off')
                     </code></pre>
                 </section>
 
@@ -241,9 +243,9 @@ elif input_value == '2':
                     <pre><code contenteditable class="fragment python">
 x = 10
 while x > 0:
-    print x
+    print(x)
     x = x - 1
-print 'Done'
+print('Done')
                     </code></pre>
                 <p class="fragment">The while statement takes a predicate, and as long as it evaluates to True, the code block beneath it is repeated.</p>
                 <p class="fragment">This creates a <strong>loop</strong>. Without the `x = x - 1` statement, this would be an <strong>infinite loop</strong></p>
@@ -260,8 +262,8 @@ result = 1
 while n > 1:
     result = result * n
     n = n - 1
-print "The factorial of " + input_value + " is:"
-print result
+print("The factorial of " + input_value + " is:")
+print(result)
                     </code></pre>
                     <p class="fragment">N.B. - This implementation does not work for negative numbers. Why?</p>
                 </section>
@@ -274,8 +276,8 @@ print result
                     <pre><code contenteditable class="fragment python">
 numbers = [1, 3, 8]
 for number in numbers:
-    print "The current number is:"
-    print number
+    print("The current number is:")
+    print(number)
                     </code></pre>
                 </section>
 
@@ -285,8 +287,8 @@ for number in numbers:
                     <pre><code contenteditable class="fragment python">
 numbers = [1, 3, 8]
 for number in numbers:
-    print "The current number is:"
-    print number
+    print("The current number is:")
+    print(number)
                     </code></pre>
                     <p class="fragment">The for loop has three parts:</p>
                     <ul>
@@ -316,7 +318,7 @@ for number in numbers:
 
                     <pre><code contenteditable class="fragment python">
 a = '3'
-print type(a)
+print(type(a))
 a = float(a)
                     </code></pre>
                 </section>
@@ -325,7 +327,7 @@ a = float(a)
                     <h3>Function calls</h3>
                     <pre><code contenteditable class="fragment python">
 a = 3
-print type(a)
+print(type(a))
                     </code></pre>
                     <p class="fragment">A function can take <strong>arguments</strong></p>
                     <p class="fragment">In the example above, the variable `a` is passed as an argument to the function `type`</p>
@@ -343,14 +345,14 @@ str(32)
                     <p>The following example is a <strong>function definition</strong>. This allows us to create our own functions</p>
                     <pre><code contenteditable class="fragment python">
 def print_plus_5(x):
-    print x + 5
+    print(x + 5)
                     </code></pre>
                     <p class="fragment">The function definition has the following parts</p>
                     <ul>
                         <li class="fragment">The <strong>def</strong> keyword signifies we are defining a function</li>
                         <li class="fragment">The name of the function being defined - `print_plus_5`</li>
                         <li class="fragment">The arguments in parentheses - `x`</li>
-                        <li class="fragment">The function <strong>body</strong>, which is a block of indented code that executes when the function is called. - `print x + 5`</li>
+                        <li class="fragment">The function <strong>body</strong>, which is a block of indented code that executes when the function is called. - `print(x + 5)`</li>
                     </ul>
                 </section>
 
@@ -377,7 +379,7 @@ y = plus_5(4)
                     <p>A function does not have to take arguments, as in the following example:
                     <pre><code contenteditable class="fragment python">
 def newline():
-    print ''
+    print('')
 
 newline()
 # prints an empty line. Nothing is returned
@@ -408,9 +410,9 @@ def get_triangle_area(base, height):
 
 triangle_area = get_triangle_area(10, 20)
 
-print height
+print(height)
 # NameError
-print rect_area
+print(rect_area)
 # NameError
                     </code></pre>
                 </section>
@@ -422,10 +424,10 @@ print rect_area
                     <pre><code contenteditable class="fragment python">
 # In knights.py
 def shrubbery():
-    print "I am a shrubber"
+    print("I am a shrubbery")
 
 def ni():
-    print "Ni!" * 3
+    print("Ni!" * 3)
 
 # Run a Python shell in the same directory as knights.py and enter the following
 import knights
