update example link

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <h2>Intro to Python</h2>
     <p><a href="gdi-intro-python/class1.html">Class 1</a></p>
     <p><a href="gdi-intro-python/class2.html">Class 2</a></p>
-    <p><a href="gdi-intro-python/Examples.zip">Class 2 Examples</a></p>
     <p><a href="gdi-intro-python/class3.html">Class 3</a></p>
     <p><a href="gdi-intro-python/class4.html">Class 4</a></p>
+    <p><a href="gdi-intro-python/Examples.zip">Python Example Files</a></p>
   </body>
 </html>
