update class 4 for python 3.3 compatibility

--- a/gdi-intro-python/class4.html
+++ b/gdi-intro-python/class4.html
@@ -174,7 +174,7 @@ class Character():
 from character import Character
 character_a = Character(10, 20, 100)
 character_a.injure(10)
-print "character health is: " + character_a.health
+print("character health is: " + character_a.health)
                     </code></pre>
                 </section>
 
@@ -308,7 +308,7 @@ def find_squares(numbers):
 
 #Iterate on a generator like a list
 for square in find_squares(range(10)):
-    print square
+    print(square)
                     </code></pre>
                     <p class="fragment">A function with a <strong>yield</strong> statement creates a generator. Each yield statement "yields" the next value in the sequence</p>
                 </section>
