fix typo on tuples slide

--- a/gdi-intro-python/class3.html
+++ b/gdi-intro-python/class3.html
@@ -271,7 +271,7 @@ print(menu.get('juice', 5))
                     <p><strong>Tuples</strong> are like lists, but they are <strong>immutable</strong>. They are particularly good at storing collections of a fixed and predictable size. Use '()' to define tuples</p>
                     <p class="fragment">An x, y coordinate pair, or the RGB values of a color are good candidates for tuples.</p>
                     <pre><code contenteditable class="fragment python">
-point = (0, 1)
+point_a = (0, 1)
 x = point_a[0]
 y = point_a[1]
 
