update sets slide for python 3 compatibility

--- a/gdi-intro-python/class3.html
+++ b/gdi-intro-python/class3.html
@@ -303,7 +303,7 @@ dimensions = find_width_height(point_a, point_b)
                 <section>
                     <h3>Sets</h3>
                     <p><strong>Sets</strong> are unordered collections whose elements are unique. Therefore, adding a value to a set that already has it, does nothing.</p>
-                    <p class="fragment">Sets can be created with comma separated elements enclosed in '{}' in Python 2.7. Very often, one will make a list and use the set() function. Note: you will want to use the set() function to create an empty set, as empty {} will create a dictionary.</p>
+                    <p class="fragment">Sets can be created with comma separated elements enclosed in '{}'. Very often, one will make a list and use the set() function. Note: you will want to use the set() function to create an empty set, as empty {} will create a dictionary.</p>
                     <pre><code contenteditable class="fragment python">
 set_a = set([0, 3, 7])
 set_b = set([0, 4, 7])
