--- a/gdi-intro-python/class3.html
+++ b/gdi-intro-python/class3.html
@@ -337,17 +337,18 @@ george_present = 'George' in names
                 <!-- Let's develop it: 15 minutes -->
                 <section>
                     <h3>Let's Develop It</h3>
-                    <p>Write a program that opens a text file and does some processing.</p>
+                    <!--<p>Write a program that opens a text file and does some processing.</p>
                     <ul>
                         <li>The program should take a word as input and determine if the word appears in the file</li>
                         <li>The program should use at least one function to do its work and you should be able to import this function in a Python shell and call it with a word and filename</li>
                         <li>Use the functions from <a href="http://calebsmith.github.io/gdi-intro-python/examples/helpers.py">helpers.py</a> to help with reading in the lines and/or words of the file</li>
                         <li>Download a book in plain text from <a href="http://www.gutenberg.org/wiki/Main_Page">Project Gutenburg</a> and put it into the same directory as your python file.</li>
                     </ul>
-                    <p>The next slide has some code and other resources that should help you get started</p>
+                    <p>The next slide has some code and other resources that should help you get started</p>-->
+                    <p>Write a program that uses lists, dictionaries, or tuples. Iterate through these data structures and print the results.</p>
                 </section>
 
-                <section>
+                <!--<section>
                     <h3>Let's Develop It- Example Code</h3>
                     <pre><code contenteditable class="python">
 from helpers import generate_cleaned_lines
@@ -365,7 +366,7 @@ answer = is_word_in_file(input_word, 'pride.txt')
 # Display the answer in some meaningful way
                     </code></pre>
                     <p>I have used <a href="http://hglennrock.github.io/gdi-intro-python/examples/pride.txt">Pride and Prejudice</a> from Project Gutenburg with my example code. You can click this link and copy/paste the text into a new text file called 'pride.txt' and save it in the same folder as your code</p>
-                </section>
+                </section>-->
 
                 <!-- Block 3 20 minutes -->
                 <section>
@@ -540,16 +541,17 @@ for width, height in zip(widths, heights):
                 <!-- Let's develop it: 25 minutes -->
                 <section>
                     <h3>Let's Develop It</h3>
-                    <p>Write a program that expands on your previous one. If it is unfinished, feel free to finish the original exercise first. To expand on it, choose one of the following:</p>
+					<p>Write a program that expands on your previous one. If it is unfinished, feel free to finish the original exercise first.</p>
+                    <!--<p>Write a program that expands on your previous one. If it is unfinished, feel free to finish the original exercise first. To expand on it, choose one of the following:</p>
                     <ol>
                         <li>Determine how many times the user provided word appears in the file and/or what lines it appears on</li>
                         <li>Change the program so that it counts the number of times each word occurs. E.g. A dictionary of all words in the file, whose values are a count of their occurrences</li>
                         <li>Use <a href="http://calebsmith.github.io/gdi-intro-python/examples/boilerplate.py">boilerplate.py</a> to help you improve the reusability of the program. (The comments in that file should explain the how and why)</li> 
                     </ol>
-                    <p>Resources for this and the previous exercise are provided on the next slide for convenience</p>
+                    <p>Resources for this and the previous exercise are provided on the next slide for convenience</p>-->
                 </section>
 
-                <section>
+                <!--<section>
                     <h3>Resources</h3>
                     <ul>
                         <li>Helper functions are in <a href="http://calebsmith.github.io/gdi-intro-python/examples/helpers.py">helpers.py</a></li>
@@ -572,7 +574,7 @@ input_word = raw_input("Enter a word to search for:")
 answer = is_word_in_file(input_word, 'pride.txt')
 # Display the answer in some meaningful way
                     </code></pre>
-                </section>
+                </section>-->
 
                 <section>
                     <h3>Questions?</h3>
