--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class3.zip">Class 3 Practice Files</a></p>
     <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
+    <p><a href="gdi-core-intermediate-html-css-master/class4.zip">Class 4 Practice Files</a></p>
   <h2>Intro to Python</h2>
     <p><a href="gdi-intro-python/class1.html">Class 1</a></p>
     <p><a href="gdi-intro-python/class2.html">Class 2</a></p>
