update class 4 slides

--- a/gdi-intro-python/class4.html
+++ b/gdi-intro-python/class4.html
@@ -216,7 +216,7 @@ class BoundedMobile(Mobile):
         if self.y < 0:
             self.y = 0
                     </code></pre>
-                    <p class="fragment">See <a href="http://calebsmith.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> for a more complete example.</p>
+                    <p class="fragment">See <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> for a more complete example.</p>
                 </section>
 
                 <section>
@@ -260,7 +260,7 @@ class Grid(object):
 
                 <section>
                     <h3>Composition Continued</h3>
-                    <p>Given the class on the previous slide, the following code creates mobiles within the grid object. (Complete code is available in the aforementioned <a href="http://calebsmith.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> file.)</p>
+                    <p>Given the class on the previous slide, the following code creates mobiles within the grid object. (Complete code is available in the aforementioned <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> file.)</p>
                     <pre><code contenteditable class="fragment python">
 from mobile import Grid
 
