--- a/gdi-intro-python/class4.html
+++ b/gdi-intro-python/class4.html
@@ -216,7 +216,7 @@ class BoundedMobile(Mobile):
         if self.y < 0:
             self.y = 0
                     </code></pre>
-                    <p class="fragment">See <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> for a more complete example.</p>
+                    <p class="fragment">See <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> for a more complete example for Python 2.7. If you are using Python 3.3, see <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile3.py">mobile3.py</a></p>
                 </section>
 
                 <section>
@@ -260,7 +260,7 @@ class Grid(object):
 
                 <section>
                     <h3>Composition Continued</h3>
-                    <p>Given the class on the previous slide, the following code creates mobiles within the grid object. (Complete code is available in the aforementioned <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> file.)</p>
+                    <p>Given the class on the previous slide, the following code creates mobiles within the grid object. (Complete code is available in the aforementioned <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> or <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile3.py">mobile3.py</a> file.)</p>
                     <pre><code contenteditable class="fragment python">
 from mobile import Grid
 
@@ -277,7 +277,7 @@ grid.display_grid()
                 <section>
                     <h3>Let's Develop It</h3>
                     <p>Create a class that uses inheritance, composition, or both.</p>
-                    <p>To help you, use your work from the last exercise or the classes from <a href="http://calebsmith.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a></p>
+                    <p>To help you, use your work from the last exercise or the classes from <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile.py">mobile.py</a> or <a href="http://hglennrock.github.io/gdi-intro-python/examples/mobile3.py">mobile3.py</a></p>
                 </section>
 
                 <!-- Block 3 - Functional Programming - 20 Minutes -->
