Add links to JavaScript slides

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <body>
     <h1>Girl Develop It Seattle</h1>
+    <h2>Intro to JavaScript</h2>
+    <p><a href="gdi-core-javascript/class1.html">Class 1</a></p>
+    <p><a href="gdi-core-javascript/class2.html">Class 2</a></p>
+    <p><a href="gdi-core-javascript/class3.html">Class 3</a></p>
+    <p><a href="gdi-core-javascript/class4.html">Class 4</a></p>
 	<h2>Intro to Web Concepts</h2>
     <p><a href="gdi-intro-web-concepts/index.html">Class Slides</a></p>
     <h2>Intermediate HTML and CSS</h2>
