add content for database class 1

--- a/gdi-intro-databases/index.html
+++ b/gdi-intro-databases/index.html
@@ -38,15 +38,9 @@
 			<div class="slides">
 				<section>
 					<h3>Introduction to Databases</h3>
-                    <p>or</p>
-					<h4>What is that Web Developer talking about?</h4>
                     <img src="images/gdi_logo_badge.png" alt="" />
+										<p><a href="class1.html">Class 1</a> | Class 2 | Class 3 | Class 4</p>
 				</section>
-                <section>
-                  <h2>Questions?</h2>
-                  <div style = "font-size:1200%; height:100%; margin-top:40%" class ="blue">?
-                    <div class ="clear"></div></div>
-                </section>
 			</div>
   		<footer>
         <div class="copyright">
