--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Girl Develop It Seattle</h1>
+    <h2><a href="gdi-intro-databases/index.html">Intro to Databases</a></h2>
     <h2>Intro to JavaScript</h2>
     <p><a href="gdi-core-javascript-master/class1.html">Class 1</a></p>
     <p><a href="gdi-core-javascript-master/class2.html">Class 2</a></p>
