--- a/gdi-intro-databases/index.html
+++ b/gdi-intro-databases/index.html
@@ -4,11 +4,11 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Intro to Web Concepts - Girl Develop It</title>
+		<title>Intro to Databases - Girl Develop It</title>
 
-		<meta name="description" content="This is the official Girl Develop It Core Intro Web Concepts course. Material was originally developed by Matt Torbin and Elise Wei.
+		<meta name="description" content="This is the Girl Develop It Seattle Intro to Databases course.
 
-    The course is meant to be taught in a single two-hour workshop.">
+    The course is meant to be taught in four two-hour classes.">
 		<meta name="author" content="Girl Develop It">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -44,7 +44,7 @@
 			</div>
   		<footer>
         <div class="copyright">
-          Intro to Web Concepts -- Girl Develop It --
+          Intro to Databases -- Girl Develop It --
           <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/80x15.png" /></a>
         </div>
       </footer>
