add sql overview slide

--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -58,7 +58,15 @@
 				</section>
 
 		    <section>
-
+					<h3>Intro to SQL</h3>
+					<ul>
+						<li>SQL - Structured Query Language</li>
+						<li>Special purpose language for managing data in a RDBMS</li>
+						<li>First introduced by Oracle in 1979</li>
+						<li>SQL is an ANSI and ISO standard. While not perfectly portable,
+						syntax across systems is mostly the same.</li>
+						<li>SQL is great to know, because it is <em>everywhere</em>.
+					</ul>
         </section>
 
         <section>
