start adding sqlite3 install instructions

--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -69,6 +69,22 @@
 					</ul>
         </section>
 
+				<section>
+					<h3>Installing SQLite3</h3>
+					<h4>Windows</h4>
+					<ul>
+						<li><a href="http://git-scm.com/downloads">Install Git</a>(Windows only)</li>
+						<li>We will be using Git Bash instead of the Command Line</li>
+						<li><a href="http://www.sqlite.org/download.html">Install SQLite3</a></li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Installing SQLite3</h3>
+					<h4>Mac</h4>
+
+				</section>
+
         <section>
           <h2>Questions?</h2>
           <div style = "font-size:1200%; height:100%; margin-top:40%" class ="blue">?
