--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -73,8 +73,8 @@
 					<h3>Installing SQLite3</h3>
 					<h4>Windows</h4>
 					<ul>
-						<li><a href="http://git-scm.com/downloads">Install Git</a>(Windows only)</li>
-						<li>We will be using Git Bash instead of the Command Line</li>
+						<li><a href="http://git-scm.com/downloads">Install Git</a> (Windows only)</li>
+						<ul><li>We will be using Git Bash instead of the Command Line</li></ul>
 						<li><a href="http://www.sqlite.org/download.html">Install SQLite3</a></li>
 					</ul>
 				</section>
@@ -82,7 +82,13 @@
 				<section>
 					<h3>Installing SQLite3</h3>
 					<h4>Mac</h4>
-
+					<p>Open Terminal and see if you have Homebrew installed</p>
+					<pre><code contenteditable class="JavaScript">$ brew -v
+Homebrew 0.9.5</code></pre>
+					<p>If you do not see "Homebrew" and a version number, copy and paste this line into Terminal:</p>
+					<pre><code contenteditable class="JavaScript">ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"</code></pre>
+					<p>Install SQLite3 using Homebrew</p>
+					<pre><code contenteditable class="JavaScript">brew install sqlite3</code></pre>
 				</section>
 
         <section>
