create db instructions

--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -91,6 +91,21 @@ Homebrew 0.9.5</code></pre>
 					<pre><code contenteditable class="JavaScript">brew install sqlite3</code></pre>
 				</section>
 
+				<section>
+					<h3>Testing our SQLite3 Installation</h3>
+					<p>Run "sqlite3 test.db" in Terminal/Git Bash
+					<pre><code>$ sqlite3 test.db
+SQLite version 3.7.8 2011-09-19 14:49:19
+Enter ".help" for instructions
+Enter SQL statements terminated with a ";"
+sqlite></pre></code>
+					<p>This created a new database named "test.db". If successful, you will see the version info and the sqlite prompt</p>
+				</section>
+
+				<section>
+
+				</section>
+
         <section>
           <h2>Questions?</h2>
           <div style = "font-size:1200%; height:100%; margin-top:40%" class ="blue">?
