add last exercise to class 2

--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -419,6 +419,15 @@ sqlite>
 </code></pre>
 				</section>
 
+				<section>
+					<h3>Let's Develop It!</h3>
+					<ul>
+						<li>Spend the rest of class writing SELECT statements with WHERE clauses</li>
+						<li>Use SQLite Manager to get ideas of how the data is structured, and what you might query</li>
+						<li>Feel free to work with a neighbor!</li>
+					</ul>
+				</section>
+
         <section>
           <h2>Questions?</h2>
           <div style = "font-size:1200%; height:100%; margin-top:40%" class ="blue">?
