add more explanation of sqlite

--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -70,7 +70,7 @@
         </section>
 
 				<section>
-					<h3>Why SQLite</h3>
+					<h3>Why SQLite?</h3>
 					<ul>
 						<li>Flexible relational database that works with a huge range of software and hardware</li>
 						<li>Embeddable database with small footprint, often used for development</li>
@@ -84,6 +84,35 @@
 							<li>Objective C</li>
 							<li>...and more!</li>
 						</ul></li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>SQLite - Distinctive Features</h3>
+					<ul>
+						<li>Zero-Configuration</li>
+						<li>Serverless - no separate server process is required. SQLite reads and writes direclty to disk.</li>
+						<li>Single, compact database file</li>
+						<li>Stable cross-platform database file</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>SQLite - What's it good for?</h3>
+					<ul>
+						<li>Desktop applications</li>
+						<li>Mobile apps</li>
+						<li>Low traffic websites</li>
+						<li>Ad hoc command line data analysis</li>
+						<li>Stand-in for enterprise RDBMS during testing or demos</li>
+					</ul>
+					<br><br>
+					<h4>What's it not good for?</h4>
+					<ul>
+						<li>Client/Server applications</li>
+						<li>High volume websites</li>
+						<li>Very large datasets</li>
+						<li>High concurrency (simultaneous readers)</li>
 					</ul>
 				</section>
 
@@ -434,6 +463,16 @@ sqlite>
 						<li>Use SQLite Manager to get ideas of how the data is structured, and what you might query</li>
 						<li>Feel free to work with a neighbor!</li>
 					</ul>
+				</section>
+
+				<section>
+						<h3>Resources</h3>
+								<ul>
+										<li><a href="http://www.sqlite.org/whentouse.html">When to Use SQLite</a> - A list of good uses for SQLite, as well as situations where another RDMBS would be better.</li>
+										<li></li>
+										<li></li>
+										<li></li>
+							</ul>
 				</section>
 
         <section>
